refactor: groom, appointment