@@ -6,15 +6,18 @@ import com.astral.express.pccms.boarding.dto.response.StaffBoardingStayResponse;
 import com.astral.express.pccms.boarding.entity.BoardingSession;
 import com.astral.express.pccms.boarding.entity.CareLog;
 import com.astral.express.pccms.boarding.entity.CarePeriod;
+import com.astral.express.pccms.boarding.repository.BoardingSessionRepository;
 import com.astral.express.pccms.boarding.repository.CareLogRepository;
+import com.astral.express.pccms.boarding.support.BoardingPeriodLabels;
 import com.astral.express.pccms.common.exception.BusinessException;
 import com.astral.express.pccms.common.exception.ErrorCode;
 import com.astral.express.pccms.pet.entity.Pets;
 import com.astral.express.pccms.pet.repository.PetRepository;
 import com.astral.express.pccms.user.entity.Users;
-import jakarta.persistence.EntityManager;
+import com.astral.express.pccms.user.repository.UserRepository;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
+import org.mockito.ArgumentCaptor;
 import org.mockito.InjectMocks;
 import org.mockito.Mock;
 import org.mockito.junit.jupiter.MockitoExtension;
@@ -32,6 +35,7 @@ import static org.mockito.ArgumentMatchers.any;
 import static org.mockito.ArgumentMatchers.eq;
 import static org.mockito.BDDMockito.given;
 import static org.mockito.Mockito.verify;
+import java.sql.Timestamp;
 
 @ExtendWith(MockitoExtension.class)
 @MockitoSettings(strictness = Strictness.LENIENT)
@@ -44,39 +48,46 @@ class BoardingStaffServiceImplTest {
     private PetRepository petRepository;
 
     @Mock
-    private EntityManager entityManager;
+    private BoardingSessionRepository boardingSessionRepository;
+
+    @Mock
+    private UserRepository userRepository;
 
     @InjectMocks
     private BoardingStaffServiceImpl boardingStaffService;
 
     @Test
     void should_ListActiveStays_Success() {
-        // GIVEN
         UUID sessionId = UUID.randomUUID();
         UUID petId = UUID.randomUUID();
-        Object[] row = {
-                sessionId, petId, "Milo", "Room 101", 
-                java.sql.Date.valueOf(LocalDate.now().minusDays(2)), null, java.sql.Date.valueOf(LocalDate.now().plusDays(2)), "MORNING,NOON"
-        };
-        given(careLogRepository.findActiveStaysForStaff()).willReturn(java.util.Collections.singletonList(row));
+        CareLogRepository.StaffActiveStayRow row = staffStayRow(
+                sessionId,
+                petId,
+                "Milo",
+                "Room 101",
+                java.sql.Date.valueOf(LocalDate.now().minusDays(2)),
+                null,
+                java.sql.Date.valueOf(LocalDate.now().plusDays(2)),
+                "MORNING,NOON"
+        );
+        given(careLogRepository.findActiveStaysForStaff()).willReturn(List.of(row));
 
-        // WHEN
         List<StaffBoardingStayResponse> responses = boardingStaffService.listActiveStays();
 
-        // THEN
         assertThat(responses).hasSize(1);
         assertThat(responses.get(0).petName()).isEqualTo("Milo");
-        assertThat(responses.get(0).todayLogSummary()).contains("Sáng", "Trưa");
+        assertThat(responses.get(0).todayLogSummary()).contains(
+                BoardingPeriodLabels.toPeriodLabel("MORNING"),
+                BoardingPeriodLabels.toPeriodLabel("NOON")
+        );
     }
 
     @Test
     void should_ListSessionLogs_Success() {
-        // GIVEN
         UUID sessionId = UUID.randomUUID();
         UUID petId = UUID.randomUUID();
-        
-        Object[] contextRow = {sessionId, petId, "IN_STAY"};
-        given(careLogRepository.findSessionContext(sessionId)).willReturn(Optional.of(contextRow));
+        given(careLogRepository.findSessionContext(sessionId))
+                .willReturn(Optional.of(sessionContext(sessionId, petId, "IN_STAY")));
 
         Pets pet = new Pets();
         pet.setId(petId);
@@ -89,35 +100,33 @@ class BoardingStaffServiceImplTest {
         BoardingSession session = new BoardingSession();
         session.setId(sessionId);
 
-        CareLog log1 = new CareLog();
-        log1.setId(UUID.randomUUID());
-        log1.setSession(session);
-        log1.setPet(pet);
-        log1.setStaff(staff);
-        log1.setPeriodCode(CarePeriod.MORNING);
-        log1.setFeedingStatus("GOOD");
-        log1.setHygieneStatus("CLEAN");
-        
-        given(careLogRepository.findBySessionIdAndLogDateOrderByPeriodCodeDesc(eq(sessionId), any(LocalDate.class)))
-                .willReturn(List.of(log1));
+        CareLog log = new CareLog();
+        log.setId(UUID.randomUUID());
+        log.setSession(session);
+        log.setPet(pet);
+        log.setStaff(staff);
+        log.setPeriodCode(CarePeriod.MORNING);
+        log.setFeedingStatus("GOOD");
+        log.setHygieneStatus("CLEAN");
+
+        given(careLogRepository.findBySessionIdAndLogDateAndDeletedAtIsNullOrderByPeriodCodeDesc(
+                eq(sessionId),
+                any(LocalDate.class)
+        )).willReturn(List.of(log));
         given(petRepository.findById(petId)).willReturn(Optional.of(pet));
 
-        // WHEN
         List<CareLogResponse> responses = boardingStaffService.listSessionLogs(sessionId, LocalDate.now());
 
-        // THEN
         assertThat(responses).hasSize(1);
         assertThat(responses.get(0).periodCode()).isEqualTo(CarePeriod.MORNING);
     }
 
     @Test
     void should_ThrowException_when_ListSessionLogs_SessionNotActive() {
-        // GIVEN
         UUID sessionId = UUID.randomUUID();
-        Object[] contextRow = {sessionId, UUID.randomUUID(), "COMPLETED"};
-        given(careLogRepository.findSessionContext(sessionId)).willReturn(Optional.of(contextRow));
+        given(careLogRepository.findSessionContext(sessionId))
+                .willReturn(Optional.of(sessionContext(sessionId, UUID.randomUUID(), "COMPLETED")));
 
-        // WHEN & THEN
         assertThatThrownBy(() -> boardingStaffService.listSessionLogs(sessionId, LocalDate.now()))
                 .isInstanceOf(BusinessException.class)
                 .hasFieldOrPropertyWithValue("errorCode", ErrorCode.ERR_BRG_002_SESSION_NOT_ACTIVE);
@@ -125,30 +134,39 @@ class BoardingStaffServiceImplTest {
 
     @Test
     void should_UpsertCareLog_Success() {
-        // GIVEN
         UUID staffId = UUID.randomUUID();
         UUID sessionId = UUID.randomUUID();
         UUID petId = UUID.randomUUID();
-        
-        UpsertCareLogRequest request = new UpsertCareLogRequest(sessionId, LocalDate.now(), "MORNING", "GOOD", "CLEAN", "All good", null);
-        Object[] contextRow = {sessionId, petId, "IN_STAY"};
-        given(careLogRepository.findSessionContext(sessionId)).willReturn(Optional.of(contextRow));
-        
-        given(careLogRepository.findBySessionIdAndLogDateAndPeriodCode(eq(sessionId), any(LocalDate.class), eq(CarePeriod.MORNING)))
-                .willReturn(Optional.empty());
+
+        UpsertCareLogRequest request = new UpsertCareLogRequest(
+                sessionId,
+                LocalDate.now(),
+                "MORNING",
+                "GOOD",
+                "CLEAN",
+                "All good",
+                null
+        );
+        given(careLogRepository.findSessionContext(sessionId))
+                .willReturn(Optional.of(sessionContext(sessionId, petId, "IN_STAY")));
+        given(careLogRepository.findBySessionIdAndLogDateAndPeriodCodeAndDeletedAtIsNull(
+                eq(sessionId),
+                any(LocalDate.class),
+                eq(CarePeriod.MORNING)
+        )).willReturn(Optional.empty());
 
         BoardingSession session = new BoardingSession();
         session.setId(sessionId);
-        given(entityManager.getReference(BoardingSession.class, sessionId)).willReturn(session);
-        
+        given(boardingSessionRepository.getReferenceById(sessionId)).willReturn(session);
+
         Pets pet = new Pets();
         pet.setId(petId);
-        given(entityManager.getReference(Pets.class, petId)).willReturn(pet);
-        
+        given(petRepository.getReferenceById(petId)).willReturn(pet);
+
         Users staff = new Users();
         staff.setId(staffId);
         staff.setFullName("Staff B");
-        given(entityManager.getReference(Users.class, staffId)).willReturn(staff);
+        given(userRepository.getReferenceById(staffId)).willReturn(staff);
 
         CareLog savedLog = new CareLog();
         savedLog.setId(UUID.randomUUID());
@@ -159,14 +177,12 @@ class BoardingStaffServiceImplTest {
         savedLog.setPeriodCode(CarePeriod.MORNING);
         savedLog.setFeedingStatus("GOOD");
         savedLog.setHygieneStatus("CLEAN");
-        
+
         given(careLogRepository.save(any(CareLog.class))).willReturn(savedLog);
         given(petRepository.findById(petId)).willReturn(Optional.of(pet));
 
-        // WHEN
         CareLogResponse response = boardingStaffService.upsertCareLog(staffId, request);
 
-        // THEN
         assertThat(response.feedingStatus()).isEqualTo("GOOD");
         assertThat(response.periodCode()).isEqualTo(CarePeriod.MORNING);
         verify(careLogRepository).save(any(CareLog.class));
@@ -175,12 +191,15 @@ class BoardingStaffServiceImplTest {
     @Test
     void listSessionLogs_shouldUseNow_whenLogDateIsNull() {
         UUID sessionId = UUID.randomUUID();
-        Object[] contextRow = {sessionId, UUID.randomUUID(), "IN_STAY"};
-        given(careLogRepository.findSessionContext(sessionId)).willReturn(Optional.of(contextRow));
-        given(careLogRepository.findBySessionIdAndLogDateOrderByPeriodCodeDesc(eq(sessionId), any(LocalDate.class)))
-                .willReturn(List.of());
+        given(careLogRepository.findSessionContext(sessionId))
+                .willReturn(Optional.of(sessionContext(sessionId, UUID.randomUUID(), "IN_STAY")));
+        given(careLogRepository.findBySessionIdAndLogDateAndDeletedAtIsNullOrderByPeriodCodeDesc(
+                eq(sessionId),
+                any(LocalDate.class)
+        )).willReturn(List.of());
 
         List<CareLogResponse> responses = boardingStaffService.listSessionLogs(sessionId, null);
+
         assertThat(responses).isEmpty();
     }
 
@@ -188,13 +207,17 @@ class BoardingStaffServiceImplTest {
     void listActiveStays_shouldHandleNullsAndVariousDateTypes() {
         UUID sessionId = UUID.randomUUID();
         UUID petId = UUID.randomUUID();
-        
-        // row: sessionId, petId, petName(null), roomLabel(null), checkinDate1(null), checkinDate2(Date), checkoutDate(Timestamp), todayPeriods(null)
-        Object[] row = {
-                sessionId, petId, null, null, 
-                null, new java.util.Date(), new java.sql.Timestamp(System.currentTimeMillis()), null
-        };
-        given(careLogRepository.findActiveStaysForStaff()).willReturn(java.util.Collections.singletonList(row));
+        CareLogRepository.StaffActiveStayRow row = staffStayRow(
+                sessionId,
+                petId,
+                null,
+                null,
+                null,
+                new java.util.Date(),
+                new Timestamp(System.currentTimeMillis()),
+                null
+        );
+        given(careLogRepository.findActiveStaysForStaff()).willReturn(List.of(row));
 
         List<StaffBoardingStayResponse> responses = boardingStaffService.listActiveStays();
 
@@ -208,28 +231,39 @@ class BoardingStaffServiceImplTest {
     void listActiveStays_shouldHandleOnePeriodLogged() {
         UUID sessionId = UUID.randomUUID();
         UUID petId = UUID.randomUUID();
-        
-        Object[] row = {
-                sessionId, petId, "Milo", "Room 101", 
-                java.sql.Date.valueOf(LocalDate.now()), null, null, "MORNING"
-        };
-        given(careLogRepository.findActiveStaysForStaff()).willReturn(java.util.Collections.singletonList(row));
+        CareLogRepository.StaffActiveStayRow row = staffStayRow(
+                sessionId,
+                petId,
+                "Milo",
+                "Room 101",
+                java.sql.Date.valueOf(LocalDate.now()),
+                null,
+                null,
+                "MORNING"
+        );
+        given(careLogRepository.findActiveStaysForStaff()).willReturn(List.of(row));
 
         List<StaffBoardingStayResponse> responses = boardingStaffService.listActiveStays();
 
-        assertThat(responses.get(0).todayLogSummary()).isEqualTo("Đã cập nhật sáng");
+        assertThat(responses.get(0).todayLogSummary())
+                .endsWith(BoardingPeriodLabels.toPeriodLabel("MORNING").toLowerCase());
     }
 
     @Test
     void listActiveStays_shouldHandleAllPeriodsLogged() {
         UUID sessionId = UUID.randomUUID();
         UUID petId = UUID.randomUUID();
-        
-        Object[] row = {
-                sessionId, petId, "Milo", "Room 101", 
-                java.sql.Date.valueOf(LocalDate.now()), null, null, "MORNING,NOON,AFTERNOON"
-        };
-        given(careLogRepository.findActiveStaysForStaff()).willReturn(java.util.Collections.singletonList(row));
+        CareLogRepository.StaffActiveStayRow row = staffStayRow(
+                sessionId,
+                petId,
+                "Milo",
+                "Room 101",
+                java.sql.Date.valueOf(LocalDate.now()),
+                null,
+                null,
+                "MORNING,NOON,AFTERNOON"
+        );
+        given(careLogRepository.findActiveStaysForStaff()).willReturn(List.of(row));
 
         List<StaffBoardingStayResponse> responses = boardingStaffService.listActiveStays();
 
@@ -239,8 +273,8 @@ class BoardingStaffServiceImplTest {
     @Test
     void assertActiveSession_shouldHandleNullStatus() {
         UUID sessionId = UUID.randomUUID();
-        Object[] contextRow = {sessionId, UUID.randomUUID(), null};
-        given(careLogRepository.findSessionContext(sessionId)).willReturn(Optional.of(contextRow));
+        given(careLogRepository.findSessionContext(sessionId))
+                .willReturn(Optional.of(sessionContext(sessionId, UUID.randomUUID(), null)));
 
         assertThatThrownBy(() -> boardingStaffService.listSessionLogs(sessionId, LocalDate.now()))
                 .isInstanceOf(BusinessException.class)
@@ -252,41 +286,121 @@ class BoardingStaffServiceImplTest {
         UUID staffId = UUID.randomUUID();
         UUID sessionId = UUID.randomUUID();
         UUID petId = UUID.randomUUID();
-        
-        UpsertCareLogRequest request = new UpsertCareLogRequest(sessionId, null, "MORNING", "GOOD", "CLEAN", "   ", "   ");
-        Object[] contextRow = {sessionId, petId, "IN_STAY"};
-        given(careLogRepository.findSessionContext(sessionId)).willReturn(Optional.of(contextRow));
-        
-        given(careLogRepository.findBySessionIdAndLogDateAndPeriodCode(eq(sessionId), any(LocalDate.class), eq(CarePeriod.MORNING)))
-                .willReturn(Optional.empty());
+
+        UpsertCareLogRequest request = new UpsertCareLogRequest(
+                sessionId,
+                null,
+                "MORNING",
+                "GOOD",
+                "CLEAN",
+                "   ",
+                "   "
+        );
+        given(careLogRepository.findSessionContext(sessionId))
+                .willReturn(Optional.of(sessionContext(sessionId, petId, "IN_STAY")));
+        given(careLogRepository.findBySessionIdAndLogDateAndPeriodCodeAndDeletedAtIsNull(
+                eq(sessionId),
+                any(LocalDate.class),
+                eq(CarePeriod.MORNING)
+        )).willReturn(Optional.empty());
 
         BoardingSession session = new BoardingSession();
         session.setId(sessionId);
-        given(entityManager.getReference(BoardingSession.class, sessionId)).willReturn(session);
-        
+        given(boardingSessionRepository.getReferenceById(sessionId)).willReturn(session);
+
         Pets pet = new Pets();
         pet.setId(petId);
-        given(entityManager.getReference(Pets.class, petId)).willReturn(pet);
-        
+        given(petRepository.getReferenceById(petId)).willReturn(pet);
+
         Users staff = new Users();
         staff.setId(staffId);
-        given(entityManager.getReference(Users.class, staffId)).willReturn(staff);
+        given(userRepository.getReferenceById(staffId)).willReturn(staff);
 
         CareLog savedLog = new CareLog();
         savedLog.setId(UUID.randomUUID());
         savedLog.setSession(session);
         savedLog.setPet(pet);
         savedLog.setStaff(staff);
-        
+
         given(careLogRepository.save(any(CareLog.class))).willReturn(savedLog);
         given(petRepository.findById(petId)).willReturn(Optional.of(pet));
 
-        CareLogResponse response = boardingStaffService.upsertCareLog(staffId, request);
-        
-        org.mockito.ArgumentCaptor<CareLog> captor = org.mockito.ArgumentCaptor.forClass(CareLog.class);
+        boardingStaffService.upsertCareLog(staffId, request);
+
+        ArgumentCaptor<CareLog> captor = ArgumentCaptor.forClass(CareLog.class);
         verify(careLogRepository).save(captor.capture());
         assertThat(captor.getValue().getHealthNote()).isNull();
         assertThat(captor.getValue().getStaffNote()).isNull();
     }
 
+    private static CareLogRepository.SessionContextRow sessionContext(UUID sessionId, UUID petId, String status) {
+        return new CareLogRepository.SessionContextRow() {
+            @Override
+            public UUID getSessionId() {
+                return sessionId;
+            }
+
+            @Override
+            public UUID getPetId() {
+                return petId;
+            }
+
+            @Override
+            public String getStatus() {
+                return status;
+            }
+        };
+    }
+
+    private static CareLogRepository.StaffActiveStayRow staffStayRow(
+            UUID sessionId,
+            UUID petId,
+            String petName,
+            String roomLabel,
+            Object checkinDate,
+            Object expCheckin,
+            Object expCheckout,
+            String todayPeriods) {
+        return new CareLogRepository.StaffActiveStayRow() {
+            @Override
+            public UUID getSessionId() {
+                return sessionId;
+            }
+
+            @Override
+            public UUID getPetId() {
+                return petId;
+            }
+
+            @Override
+            public String getPetName() {
+                return petName;
+            }
+
+            @Override
+            public String getRoomLabel() {
+                return roomLabel;
+            }
+
+            @Override
+            public Object getCheckinDate() {
+                return checkinDate;
+            }
+
+            @Override
+            public Object getExpCheckin() {
+                return expCheckin;
+            }
+
+            @Override
+            public Object getExpCheckout() {
+                return expCheckout;
+            }
+
+            @Override
+            public String getTodayPeriods() {
+                return todayPeriods;
+            }
+        };
+    }
 }
